--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,13 @@
-<p>dashboard works!</p>
+<div class="container"> <!--routerLink="/detail/{ {hero._id}}-->
+    <div class="offer_container">
+        <a *ngFor="let car of cars">
+            <img src="./assets/{{car.id}}.jpg">
+            <p class="big">{{car.name}}</p>
+            <p>{{car.release_year}}</p>
+            <p>{{car.mileage}}</p>
+            <p>{{car.KM}}</p>
+            <p class="big">{{car.price}}</p>
+            <button>KUP</button>
+        </a>
+    </div>
+</div>
