--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -6,18 +6,59 @@
 .offer_container {
     flex-flow: row wrap;
     display: flex;
-    gap: 10px 30px;
+    gap: 100px 10px;
     align-items: center;
+    justify-content: center;
 
 }
 
 a {
     text-decoration: none;
     border: 2px solid gainsboro;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+p{
+    margin: 0;
+    padding: 5px;
+}
+button{
+  background: #FF4742;
+  border: 1px solid #FF4742;
+  border-radius: 6px;
+  color: #FFFFFF;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: 800;
+  line-height: 16px;
+  min-height: 40px;
+  outline: 0;
+  padding: 0px 70px 0px 70px;
+  text-align: center;
+  text-rendering: geometricprecision;
+  text-transform: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: middle;
+}
+
+button:hover,
+button:active {
+  background-color: initial;
+  background-position: 0 0;
+  color: #FF4742;
+}
+
+.big{
+    font-size: 120%;
 }
 
 img {
     width: 300px;
+    height: 200px;
 }
 
 button{
